--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerview_movie_posters"
+        android:id="@+id/rv_movie_posters"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
