--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="16dp"
-            android:text="An error has occurred."
+            android:text="@string/main_error"
             android:textSize="20sp"
             android:visibility="invisible" />
 
