--- a/app/src/main/res/menu/sort.xml
+++ b/app/src/main/res/menu/sort.xml
@@ -5,10 +5,10 @@
     tools:context=".MainActivity">
     <item
         android:id="@+id/action_popular"
-        android:title="Popular"
+        android:title="@string/sort_popular"
         app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/action_top_rated"
-        android:title="Top-Rated"
+        android:title="@string/sort_top_rated"
         app:showAsAction="ifRoom" />
 </menu>
