--- a/app/src/main/res/menu/sort.xml
+++ b/app/src/main/res/menu/sort.xml
@@ -6,9 +6,13 @@
     <item
         android:id="@+id/action_popular"
         android:title="@string/sort_popular"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="collapseActionView"/>
     <item
         android:id="@+id/action_top_rated"
         android:title="@string/sort_top_rated"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="collapseActionView" />
+    <item
+        android:id="@+id/action_favourites"
+        android:title="@string/sort_favourites"
+        app:showAsAction="collapseActionView" />
 </menu>
